# pandograph

./: .gitignore  LICENSE  Makefile  README.md  watch.sh  wscript
_pandoc/defaults/: beamer.yaml  common.yaml  doc.yaml  doc_docx.yaml  doc_pdf.yaml  doc_tex.yaml  docx.yaml  exercise.yaml  handout.yaml  html.yaml  notes.yaml  odt.yaml  pdf.yaml  slides.yaml  svelte.yaml
_pandoc/filters/: markup-to-component.lua
_pandoc/filters/lua-filters/: .gitrepo
_pandoc/filters/pfs/: .gitrepo  Makefile  clear.lua  dependencies.lua  diagram.lua  dune-project  forms.lua  kinds.lua  logic-and-control.lua  mdsvex.lua  nbspace.lua  output.lua  placeholder.lua  read-yaml-key.lua  relativize.lua  solution.lua  strip-classes.lua  task.lua  thinspace.lua
_pandoc/filters/pfs/align/: align.lua
_pandoc/filters/pfs/center/: center.lua
_pandoc/filters/pfs/clear/: clear.lua
_pandoc/filters/pfs/dependencies/: dependencies.lua
_pandoc/filters/pfs/diagram/: diagram.lua  ditaa.html
_pandoc/filters/pfs/ditaa/: ditaa.lua
_pandoc/filters/pfs/file/: file.lua
_pandoc/filters/pfs/fontsize/: fontsize.lua
_pandoc/filters/pfs/forms/: forms.lua
_pandoc/filters/pfs/frame/: frame.lua
_pandoc/filters/pfs/io/: io.lua
_pandoc/filters/pfs/scratchblock/: dune  package-lock.json  package.json  scratchblock.js  scratchblock.lua  scratchblock.lua.t.bak  style.css  test.txt
_pandoc/filters/pfs/tikzpicture/test/: dune  tikzpicture.lua.t
_pandoc/headers/: common.tex  docs.tex  exam.tex  exercise.tex  handout.tex  notes.tex  slides.tex
_pandoc/headers/partials/: colorlinks.tex  colors.tex  file.tex  io.tex  pagemark-footer.tex  small-header.tex  solution.tex  tikz.tex
_pandoc/include/: exam-before-body.md
_pandoc/literature/: literature.bib
_pandoc/metadata/: beamer.yaml  common.yaml  doc.yaml  exam.yaml  notes.yaml  slides.yaml
_pandoc/preprocessors/: knit.R
_pandoc/templates/default/: .gitrepo
_pandoc/templates/slides/: .gitrepo  default.latex
_pandoc/templates/svelte/: default.svelte
_pandoc/writers/: codeblock-components.yaml  components.yaml  div-components.yaml  span-components.yaml  svelte.lua
_pandoc/writers/test/: svelte.lua.t
_test/file/: 01-file.md
_test/io/: 01.md  02-io.md
_waf/: .gitrepo  knitr.py  pandoc.py  requirements.txt  utils.py
_web/: Makefile  package-lock.json  package.json  postcss.config.cjs  svelte.config.js  tailwind.config.cjs  vite.config.ts
_web/src/: app.html  hooks.server.ts
_web/src/routes/: +layout.svelte
_web/static/: images
csl/: autor-jahr-3.csl  inline-bibliography.csl
headers/: common.tex  docs.tex  exercise.tex  handout-article.tex  notes.tex  switch-case.tex
headers/partials/: center-graphics.tex  exam-headings.tex  lsg.tex  notes.tex  pagestyle-common.tex  separate-paragraph-headings.tex  task.tex  tiny-caption.tex
metadata/: common.yaml  exercise.yaml  handout.yaml
templates/slides/: .gitrepo  default.latex
test/: microtype.md  virtualization.ditaa
test/cram/: Text  dune  format.t  microtype.t  size.t
web/: package-lock.json  package.json  svelte.config.js  vite.config.ts
(+153 files in other folders)
